Update email template and add bypass for test email

--- a/email_template_preview.html
+++ b/email_template_preview.html
@@ -260,7 +260,7 @@
                         <p> 2025 Itza Yerba Mate. All rights reserved.</p>
                         
                         <div class="disclaimer">
-                            This email was sent to {{email}} because you joined Itza Yerba Mate's pre-order waitlist.<br>
+                            This email was sent to test@example.com because you joined Itza Yerba Mate's pre-order waitlist.<br>
                             To unsubscribe, <a href="#" style="color: #8FBC94;">click here</a>.
                         </div>
                     </div>
