--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .admin-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #2D5A27;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            font-size: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            transition: all 0.3s ease;
+        }
+        
+        .admin-button:hover {
+            background-color: #FF7F3F;
+            transform: scale(1.1);
+        }
+    </style>
 </head>
 <body>
     <div class="announcement-banner">
@@ -42,6 +68,11 @@
             </form>
         </div>
     </section>
+
+    <!-- Admin Button -->
+    <a href="/admin" class="admin-button" title="Admin Dashboard">
+        <span>⚙️</span>
+    </a>
 
     <script>
         async function submitForm(event) {
