--- a/waitlist.html
+++ b/waitlist.html
@@ -148,7 +148,7 @@
         .admin-button {
             position: fixed;
             bottom: 20px;
-            right: 20px;
+            left: 20px;
             background-color: var(--primary-green);
             color: white;
             border: none;
@@ -163,6 +163,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
             z-index: 1000;
             transition: all 0.3s ease;
+            text-decoration: none;
         }
         
         .admin-button:hover {
@@ -205,9 +206,7 @@
     </div>
     
     <!-- Admin Button -->
-    <a href="/admin" class="admin-button" title="Admin Dashboard">
-        <span>⚙️</span>
-    </a>
+    <a href="/admin" class="admin-button" title="Admin Dashboard">⚙️</a>
 
     <script>
         async function submitForm(event) {
