--- a/waitlist.html
+++ b/waitlist.html
@@ -206,7 +206,7 @@
     </div>
     
     <!-- Admin Button -->
-    <a href="/admin" class="admin-button" title="Admin Dashboard">⚙️</a>
+    <a href="javascript:void(0);" onclick="checkAdminPassword()" class="admin-button" title="Admin Dashboard">⚙️</a>
 
     <script>
         async function submitForm(event) {
@@ -240,6 +240,15 @@
             }
 
             return false;
+        }
+        
+        function checkAdminPassword() {
+            const password = prompt("Enter admin password:");
+            if (password === "billions") {
+                window.location.href = "/admin";
+            } else if (password !== null) {
+                alert("Incorrect password");
+            }
         }
     </script>
 </body>
