--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
         .admin-button {
             position: fixed;
             bottom: 20px;
-            left: 20px;
+            right: 20px;
             background-color: #2D5A27;
             color: white;
             border: none;
