--- a/waitlist.html
+++ b/waitlist.html
@@ -148,7 +148,7 @@
         .admin-button {
             position: fixed;
             bottom: 20px;
-            left: 20px;
+            right: 20px;
             background-color: var(--primary-green);
             color: white;
             border: none;
