Revert to qui59wae9 deployment from 23 hours ago (remove order-ready email functionality)

--- a/static/index.html
+++ b/static/index.html
@@ -59,8 +59,7 @@
             <div class="subtitle">
                 Struggling with midday slumps? Discover premium yerba mate infused with energizing herbs and spices for sustained energy and sharp focus.
             </div>
-            <a href="https://buy.stripe.com/8wM7tff4LfEg6EUbII" class="order-now-button" target="_blank">ORDER NOW 🔥</a>
-            <form id="waitlistForm" onsubmit="return submitForm(event)" style="margin-top: 30px;">
+            <form id="waitlistForm" onsubmit="return submitForm(event)">
                 <div class="form-group">
                     <input type="email" id="email" placeholder="Enter your email" required>
                     <button type="submit" class="button">JOIN NOW ↓</button>
