Add ORDER NOW button with fire emoji to homepage

--- a/static/index.html
+++ b/static/index.html
@@ -39,11 +39,11 @@
 <body>
     <div class="announcement-banner">
         <div class="banner-content">
-            <span>🎁 JOIN THE WAITLIST FOR A FREE YERBA MATE SET 🎁</span>
-            <span>🎁 JOIN THE WAITLIST FOR A FREE YERBA MATE SET 🎁</span>
-            <span>🎁 JOIN THE WAITLIST FOR A FREE YERBA MATE SET 🎁</span>
-            <span>🎁 JOIN THE WAITLIST FOR A FREE YERBA MATE SET 🎁</span>
-            <span>🎁 JOIN THE WAITLIST FOR A FREE YERBA MATE SET 🎁</span>
+            <span>🔥 ORDERING IS NOW LIVE! GET YOUR YERBA MATE TODAY 🔥</span>
+            <span>🔥 ORDERING IS NOW LIVE! GET YOUR YERBA MATE TODAY 🔥</span>
+            <span>🔥 ORDERING IS NOW LIVE! GET YOUR YERBA MATE TODAY 🔥</span>
+            <span>🔥 ORDERING IS NOW LIVE! GET YOUR YERBA MATE TODAY 🔥</span>
+            <span>🔥 ORDERING IS NOW LIVE! GET YOUR YERBA MATE TODAY 🔥</span>
         </div>
     </div>
     <div class="beta-badge">beta access</div>
@@ -59,12 +59,16 @@
             <div class="subtitle">
                 Struggling with midday slumps? Discover premium yerba mate infused with energizing herbs and spices for sustained energy and sharp focus.
             </div>
+            <div class="order-button-container" style="text-align: center; margin: 30px 0;">
+                <a href="https://buy.stripe.com/8wM7tff4LfEg6EUbII" class="button" style="display: inline-block; font-size: 22px; padding: 16px 36px; background-color: #FF7F3F; color: white; text-decoration: none; border-radius: 8px; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;">🔥 ORDER NOW 🔥</a>
+                <p style="margin-top: 15px; font-size: 16px; color: #2D5A27; font-weight: 500;">Includes free traditional gourd and bombilla!</p>
+            </div>
             <form id="waitlistForm" onsubmit="return submitForm(event)">
                 <div class="form-group">
                     <input type="email" id="email" placeholder="Enter your email" required>
                     <button type="submit" class="button">JOIN NOW ↓</button>
                 </div>
-                <div class="promo-text">First 50 sign ups get a free gourd and bombilla with their purchase</div>
+                <div class="promo-text">Stay updated with Itza news and get exclusive offers</div>
                 <div id="message" class="message"></div>
             </form>
         </div>
